@@ -1,10 +1,5 @@
 package org.eclipse.cargotracker.infrastructure.routing;
 
-import java.util.ArrayList;
-import java.util.List;
-import java.util.logging.Level;
-import java.util.logging.Logger;
-import java.util.stream.Collectors;
 import jakarta.annotation.PostConstruct;
 import jakarta.annotation.Resource;
 import jakarta.ejb.Stateless;
@@ -13,6 +8,10 @@ import jakarta.ws.rs.client.ClientBuilder;
 import jakarta.ws.rs.client.WebTarget;
 import jakarta.ws.rs.core.GenericType;
 import jakarta.ws.rs.core.MediaType;
+import java.util.ArrayList;
+import java.util.List;
+import java.util.logging.Level;
+import java.util.logging.Logger;
 import org.eclipse.cargotracker.domain.model.cargo.Itinerary;
 import org.eclipse.cargotracker.domain.model.cargo.Leg;
 import org.eclipse.cargotracker.domain.model.cargo.RouteSpecification;
@@ -60,14 +59,13 @@ public class ExternalRoutingService implements RoutingService {
             .queryParam("origin", origin)
             .queryParam("destination", destination)
             .request(MediaType.APPLICATION_JSON_TYPE)
-            .get(new GenericType<List<TransitPath>>() {});
+            .get(new GenericType<>() {});
 
     // The returned result is then translated back into our domain model.
     List<Itinerary> itineraries = new ArrayList<>();
 
     // Use the specification to safe-guard against invalid itineraries
-    transitPaths
-        .stream()
+    transitPaths.stream()
         .map(this::toItinerary)
         .forEach(
             itinerary -> {
@@ -83,17 +81,16 @@ public class ExternalRoutingService implements RoutingService {
   }
 
   private Itinerary toItinerary(TransitPath transitPath) {
-    List<Leg> legs =
-        transitPath.getTransitEdges().stream().map(this::toLeg).collect(Collectors.toList());
+    List<Leg> legs = transitPath.getTransitEdges().stream().map(this::toLeg).toList();
     return new Itinerary(legs);
   }
 
   private Leg toLeg(TransitEdge edge) {
     return new Leg(
-        voyageRepository.find(new VoyageNumber(edge.getVoyageNumber())),
-        locationRepository.find(new UnLocode(edge.getFromUnLocode())),
-        locationRepository.find(new UnLocode(edge.getToUnLocode())),
-        edge.getFromDate(),
-        edge.getToDate());
+        voyageRepository.find(new VoyageNumber(edge.voyageNumber())),
+        locationRepository.find(new UnLocode(edge.fromUnLocode())),
+        locationRepository.find(new UnLocode(edge.toUnLocode())),
+        edge.fromDate(),
+        edge.toDate());
   }
 }
