@@ -1,12 +1,11 @@
 package org.eclipse.cargotracker.interfaces.booking.facade.internal;
 
-import java.io.Serializable;
-import java.time.LocalDate;
-import java.util.ArrayList;
-import java.util.List;
-import java.util.stream.Collectors;
 import jakarta.enterprise.context.ApplicationScoped;
 import jakarta.inject.Inject;
+import java.io.Serial;
+import java.io.Serializable;
+import java.time.LocalDate;
+import java.util.List;
 import org.eclipse.cargotracker.application.BookingService;
 import org.eclipse.cargotracker.domain.model.cargo.Cargo;
 import org.eclipse.cargotracker.domain.model.cargo.CargoRepository;
@@ -30,7 +29,7 @@ import org.eclipse.cargotracker.interfaces.booking.facade.internal.assembler.Loc
 @ApplicationScoped
 public class DefaultBookingServiceFacade implements BookingServiceFacade, Serializable {
 
-  private static final long serialVersionUID = 1L;
+  @Serial private static final long serialVersionUID = 1L;
 
   @Inject private BookingService bookingService;
   @Inject private LocationRepository locationRepository;
@@ -86,22 +85,14 @@ public class DefaultBookingServiceFacade implements BookingServiceFacade, Serial
   @Override
   // TODO [DDD] Is this the correct DTO here?
   public List<CargoRoute> listAllCargos() {
-    List<Cargo> cargos = cargoRepository.findAll();
-    List<CargoRoute> routes;
 
-    routes = cargos.stream().map(cargoRouteDtoAssembler::toDto).collect(Collectors.toList());
-
-    return routes;
+    return cargoRepository.findAll().stream().map(cargoRouteDtoAssembler::toDto).toList();
   }
 
-  @Override
   public List<String> listAllTrackingIds() {
-    List<String> trackingIds = new ArrayList<>();
-    cargoRepository
-        .findAll()
-        .forEach(cargo -> trackingIds.add(cargo.getTrackingId().getIdString()));
-
-    return trackingIds;
+    return cargoRepository.findAll().stream()
+        .map(cargo -> cargo.getTrackingId().getIdString())
+        .toList();
   }
 
   @Override
@@ -126,12 +117,6 @@ public class DefaultBookingServiceFacade implements BookingServiceFacade, Serial
     List<Itinerary> itineraries =
         bookingService.requestPossibleRoutesForCargo(new TrackingId(trackingId));
 
-    List<RouteCandidate> routeCandidates =
-        itineraries
-            .stream()
-            .map(itineraryCandidateDtoAssembler::toDto)
-            .collect(Collectors.toList());
-
-    return routeCandidates;
+    return itineraries.stream().map(itineraryCandidateDtoAssembler::toDto).toList();
   }
 }
