@@ -1,22 +1,22 @@
 package org.eclipse.pathfinder.internal;
 
+import jakarta.enterprise.context.ApplicationScoped;
+import java.io.Serial;
 import java.io.Serializable;
 import java.util.ArrayList;
-import java.util.Arrays;
 import java.util.List;
 import java.util.Random;
-import jakarta.enterprise.context.ApplicationScoped;
 
 @ApplicationScoped
 public class GraphDao implements Serializable {
 
-  private static final long serialVersionUID = 1L;
+  @Serial private static final long serialVersionUID = 1L;
 
   private final Random random = new Random();
 
   public List<String> listLocations() {
     return new ArrayList<>(
-        Arrays.asList(
+        List.of(
             "CNHKG", "AUMEL", "SESTO", "FIHEL", "USCHI", "JNTKO", "DEHAM", "CNSHA", "NLRTM",
             "SEGOT", "CNHGH", "USNYC", "USDAL"));
   }
@@ -24,17 +24,12 @@ public class GraphDao implements Serializable {
   public String getVoyageNumber(String from, String to) {
     int i = random.nextInt(5);
 
-    switch (i) {
-      case 0:
-        return "0100S";
-      case 1:
-        return "0200T";
-      case 2:
-        return "0300A";
-      case 3:
-        return "0301S";
-      default:
-        return "0400S";
-    }
+    return switch (i) {
+      case 0 -> "0100S";
+      case 1 -> "0200T";
+      case 2 -> "0300A";
+      case 3 -> "0301S";
+      default -> "0400S";
+    };
   }
 }
